--- a/index.html
+++ b/index.html
@@ -41,6 +41,7 @@
             <button type="button">-</button>
             <button type="button">*</button>
             <button type="button">/</button>
+            <button type="button">.</button>
         </div>
         <div id="end-commands">            
             <button type="button">C</button>
